--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,8 @@
     <!--or something similar.-->
     <string name="app_name">Sunshine</string>
 
-    <!--TODO (1) Add a string for the title of the refresh button, "Refresh"-->
+    <!--COMPLETED (1) Add a string for the title of the refresh button, "Refresh"-->
+    <string name="action_refresh">Refresh</string>
 
 
     <!-- - - - - - - - - - - - - -->
@@ -142,4 +143,5 @@
     <!--Used by SunshinePreferences-->
     <!-- - - - - - - - - - - - - - -->
     <!--NONE-->
+
 </resources>
